--- a/css/bootstrap-datepicker.css
+++ b/css/bootstrap-datepicker.css
@@ -119,12 +119,12 @@
 }
 .datepicker table tr td.old,
 .datepicker table tr td.new {
-  color: #999999;
+  color: #ffffff;
 }
 .datepicker table tr td.disabled,
 .datepicker table tr td.disabled:hover {
   background: none;
-  color: #999999;
+  color: #ffffff;
   cursor: default;
 }
 .datepicker table tr td.today,
@@ -364,7 +364,7 @@
 .datepicker table tr td span.disabled,
 .datepicker table tr td span.disabled:hover {
   background: none;
-  color: #999999;
+  color: #ffffff;
   cursor: default;
 }
 .datepicker table tr td span.active,
@@ -420,7 +420,7 @@
 }
 .datepicker table tr td span.old,
 .datepicker table tr td span.new {
-  color: #999999;
+  color: #ffffff;
 }
 .datepicker th.datepicker-switch {
   width: 145px;
