--- a/css/style.css
+++ b/css/style.css
@@ -4103,7 +4103,7 @@ input[type=button].btn-block {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 0.75);
@@ -4118,14 +4118,14 @@ input[type=button].btn-block {
   color: #fff;
 }
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
-  border-color: rgba(255, 255, 255, 0.1);
+  color: #ffffff;
+  border-color: #ffffff;
 }
 .navbar-dark .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .navbar-dark .navbar-text a {
   color: #fff;
@@ -9082,7 +9082,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: #ffffff !important;
 }
 
 .text-hide {
@@ -9197,7 +9197,7 @@ body {
   font-size: 17px;
   line-height: 1.8;
   font-weight: 400;
-  color: #999999;
+  color: #ffffff;
   overflow-x: hidden;
 }
 body.menu-show {
@@ -9230,8 +9230,8 @@ h1, h2, h3, h4, h5,
 
 .top {
   background: rgba(0, 0, 0, 0.05);
-  background: #062114;
-  color: #999999;
+  background: #589452;
+  color: #ffffff;
   z-index: 3;
 }
 .top span.fa {
@@ -9254,7 +9254,7 @@ h1, h2, h3, h4, h5,
 .social-media p a {
   width: 35px;
   height: 35px;
-  background: rgba(255, 255, 255, 0.1);
+  background: #ffffff;
   margin-right: 2px;
   border-radius: 50%;
 }
@@ -9321,7 +9321,7 @@ h1, h2, h3, h4, h5,
 }
 @media (max-width: 991.98px) {
   .ftco-navbar-light {
-    background: #062114 !important;
+    background: #589452 !important;
     position: relative;
     top: 0;
     padding: 10px 20px;
@@ -9331,7 +9331,7 @@ h1, h2, h3, h4, h5,
   width: 1110px;
   margin: 0 auto;
   padding: 0;
-  background: #062114 !important;
+  background: #589452 !important;
 }
 .ftco-navbar-light .navbar-brand {
   color: #000000;
@@ -9384,7 +9384,7 @@ h1, h2, h3, h4, h5,
   }
 }
 .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
-  color: #062114;
+  color: #589452;
   padding-top: 1rem;
   padding-bottom: 1rem;
   background: black;
@@ -9424,7 +9424,7 @@ h1, h2, h3, h4, h5,
   text-transform: uppercase;
   font-size: 13px;
   font-weight: 700;
-  background: rgba(255, 255, 255, 0.1);
+  background: #ffffff;
   padding: 4px 10px;
   color: #fff;
   border-radius: 2px;
@@ -9537,7 +9537,7 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   opacity: 0.5;
-  background: #062114;
+  background: #589452;
 }
 .hero-wrap.hero-wrap-2 {
   height: 600px;
@@ -9659,23 +9659,23 @@ h1, h2, h3, h4, h5,
   color: #fff !important;
 }
 .btn.btn-secondary {
-  background: #062114 !important;
-  border: 1px solid #062114 !important;
+  background: #589452 !important;
+  border: 1px solid #589452 !important;
   color: #fff !important;
 }
 .btn.btn-secondary:hover {
-  border: 1px solid #062114 !important;
+  border: 1px solid #589452 !important;
   background: transparent !important;
-  color: #062114 !important;
+  color: #589452 !important;
 }
 .btn.btn-secondary.btn-outline-secondary {
-  border: 1px solid #062114 !important;
+  border: 1px solid #589452 !important;
   background: transparent !important;
-  color: #062114 !important;
+  color: #589452 !important;
 }
 .btn.btn-secondary.btn-outline-secondary:hover {
   border: 1px solid transparent !important;
-  background: #062114 !important;
+  background: #589452 !important;
   color: #fff !important;
 }
 .btn.btn-white {
@@ -9738,7 +9738,7 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   opacity: 0.8;
-  background: #062114;
+  background: #589452;
   z-index: -1;
 }
 @media (max-width: 991.98px) {
@@ -9867,7 +9867,7 @@ h1, h2, h3, h4, h5,
   left: 0;
   right: 0;
   width: 80%;
-  background: #062114;
+  background: #589452;
   color: #fff;
   padding: 12px 10px;
   border-radius: 3px;
@@ -9894,7 +9894,7 @@ h1, h2, h3, h4, h5,
   z-index: 0;
   margin-bottom: 30px;
   color: rgba(255, 255, 255, 0.8);
-  background: #062114;
+  background: #589452;
   padding: 30px;
   position: relative;
   overflow: hidden;
@@ -9912,7 +9912,7 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   width: 50%;
-  background: rgba(255, 255, 255, 0.1);
+  background: #589452;
   z-index: -1;
   transform: matrix(1.3, 0, -0.3, 1, 0, 0);
 }
@@ -9920,8 +9920,12 @@ h1, h2, h3, h4, h5,
   background: #fc5e28;
 }
 .ftco-services-2 .services.services-2 .icon {
-  background: #062114;
+  background: #589452;
 }
+.ftco-services-2 .services.services-2::before {
+    background: #fd5e28;
+}
+
 @media (min-width: 992px) {
   .ftco-services-2 .services {
     margin-top: -70px;
@@ -10028,7 +10032,7 @@ h1, h2, h3, h4, h5,
 }
 
 .aside-stretch {
-  background: #062114;
+  background: #589452;
 }
 .aside-stretch:after {
   position: absolute;
@@ -10037,7 +10041,7 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   width: 360%;
-  background: #062114;
+  background: #589452;
 }
 @media (max-width: 767.98px) {
   .aside-stretch {
@@ -10050,7 +10054,7 @@ h1, h2, h3, h4, h5,
 }
 
 .aside-stretch-right {
-  background: #062114;
+  background: #589452;
 }
 .aside-stretch-right:after {
   position: absolute;
@@ -10059,11 +10063,11 @@ h1, h2, h3, h4, h5,
   bottom: 0;
   content: "";
   width: 360%;
-  background: #062114;
+  background: #589452;
 }
 @media (max-width: 767.98px) {
   .aside-stretch-right {
-    background: #062114;
+    background: #589452;
   }
   .aside-stretch-right:after {
     background: transparent;
@@ -10097,7 +10101,7 @@ textarea.form-control {
 }
 
 .bg-secondary {
-  background: #062114 !important;
+  background: #589452 !important;
 }
 
 .bg-half-light {
@@ -10211,7 +10215,7 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 16px;
-  background: #062114;
+  background: #589452;
   padding: 5em 0 0 0;
   z-index: 0;
   position: relative;
@@ -10228,10 +10232,10 @@ textarea.form-control {
 }
 .ftco-footer .ftco-footer-widget ul li {
   margin-bottom: 10px;
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .ftco-footer .ftco-footer-widget ul li a {
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .ftco-footer .ftco-footer-widget ul li a span {
   color: rgba(255, 255, 255, 0.7);
@@ -10241,7 +10245,7 @@ textarea.form-control {
   color: #fc5e28;
 }
 .ftco-footer p {
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .ftco-footer .ftco-heading-2 {
   font-size: 16px;
@@ -10259,7 +10263,7 @@ textarea.form-control {
   line-height: 1;
 }
 .ftco-footer .bg-primary {
-  background: #062114 !important;
+  background: #589452 !important;
   position: relative;
   z-index: 0;
   overflow: hidden;
@@ -10406,10 +10410,10 @@ textarea.form-control {
   background-color: #fc5e28;
 }
 .testimony-section.aside-stretch-right {
-  background-color: #062114;
+  background-color: #589452;
 }
 .testimony-section.aside-stretch-right:after {
-  background-color: #062114;
+  background-color: #589452;
 }
 .testimony-section .overlay {
   position: absolute;
@@ -10885,7 +10889,7 @@ textarea.form-control {
   margin-bottom: 15px;
 }
 .block-23 ul li span {
-  color: rgba(255, 255, 255, 0.5);
+  color: #ffffff;
 }
 .block-23 ul li .icon, .block-23 ul li .text {
   display: table-cell;
@@ -10912,7 +10916,7 @@ textarea.form-control {
   font-weight: 400;
 }
 .block-27 ul li a, .block-27 ul li span {
-  color: #062114;
+  color: #589452;
   text-align: center;
   display: inline-block;
   width: 40px;
@@ -10922,7 +10926,7 @@ textarea.form-control {
   border: 1px solid #cccccc;
 }
 .block-27 ul li.active a, .block-27 ul li.active span {
-  background: #062114;
+  background: #589452;
   color: #fff;
   border: 1px solid transparent;
 }
