--- a/scss/bootstrap/_reboot.scss
+++ b/scss/bootstrap/_reboot.scss
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
 
 // Reset margins on paragraphs
 //
-// Similarly, the top margin on `<p>`s get reset. However, we also reset the
+// Similarly, the top margin on ` <p style="color: #000;">`s get reset. However, we also reset the
 // bottom margin to use `rem` units instead of `em`.
 p {
   margin-top: 0;
